--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,46 @@
+body {
+    background-color: #1d171f;
+    color: rgb(250, 237, 242);;
+}
 .navbar ul{
     list-style-type: none;
     padding: 0%;
-    margin: 0%;
+    max-width: fit-content;
+    margin: auto;
     overflow: hidden;
+    font-family: 'Plus Jakarta Sans', Inter;
+    font-size: 14px;
+    font-weight: 500;
 }
 .navbar a{
-    color: blueviolet;
+    color: rgb(191, 50, 100);
     text-decoration: none;
     padding: 15px;
     display: block;
     text-align: center;
 }
 .navbar li{
-    float: left;
+    float:left;
+    margin-top: 4.8px;
+}
+.navbar li:first-child {
+    margin-right: 419px;
+    margin-top: 0px;
+}
+.discord {
+    font-family: 'Plus Jakarta Sans', Inter;
+    font-size: 14px;
+    font-weight: 500;
+    color: rgb(215, 187, 240);
+    margin-block-end: auto;
+    overflow: hidden;
+}
+.intro{
+    font-family: 'Plus Jakarta Sans', Inter;
+    font-size: 15px;
+    line-height: 1.5;
+    margin: 20px 0;
+    padding: 10px;
+    max-width: 600px;
+    margin: 0 auto;
 }
