--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,6 +1,18 @@
 body {
     background-color: #1d171f;
     color: rgb(250, 237, 242);;
+    font-family: 'Plus Jakarta Sans', Inter;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 12px 0;
+    padding: 10px;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+img {
+  display: block;
+  margin: auto;
+  width: 100%;
 }
 .navbar ul{
     list-style-type: none;
@@ -9,7 +21,7 @@ body {
     margin: auto;
     overflow: hidden;
     font-family: 'Plus Jakarta Sans', Inter;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
 }
 .navbar a{
@@ -26,4 +38,5 @@ body {
 .navbar li:first-child {
     margin-right: 396px;
     margin-top: 0px;
+    
 }
